# snip-rust

./: Cargo.toml  README.md  build.rs
.github/: copilot-instructions.md
examples/: capture_demo.rs
snip-core/: Cargo.toml
snip-core/examples/: capture_demo.rs
snip-core/src/: capture.rs  lib.rs  screenshot.rs
snip-ui/: Cargo.toml
snip-ui/src/: lib.rs
src/: capture.rs  hotkey.rs  lib.rs  main.rs  overlay.rs  paste_window.rs  renderer.rs  single_instance.rs  window_manager.rs  windows_util.rs
src/overlay/: auto_detect.rs  drawing.rs  handles.rs  state.rs  toolbar.rs
