[package]
name = "snip_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "snip_rust"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
env_logger = "0.11.8"
global-hotkey = "0.7.0"
image = "0.25.8"
screenshots = "0.8.10"
winit = { version = "0.30.12", features = ["rwh_05"] }
log = "0.4"
softbuffer = "0.4.0"
tiny-skia = "0.11.4"
bytemuck = { version = "1.16", features = ["derive"] }
tray-icon = "0.21.1"
windows = { version = "0.62.1", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_UI_WindowsAndMessaging",
] }
muda = "0.17.1"

[build-dependencies]
winres = "0.1"
image = { version = "0.25.8", default-features = false, features = ["png"] }
ico = "0.3"

[[example]]
name = "capture_demo"
path = "examples/capture_demo.rs"
